# trade-tools

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
data/binance/: hbar.csv.dvc
notebooks/: eda_binance_hbar.ipynb  initial_analysis_binance_hbar.ipynb  initial_analysis_crypto.ipynb  initial_prediction_binance_hbar.ipynb  trend_regime_prediction.ipynb  volatility_prediction_hbar.ipynb
notebooks/hbar/: eda.ipynb  portfolio optimization.ipynb  prediction_pipeline_24h_binance_hbar.ipynb  trend_volatility_indicators.ipynb
src/: portfolio_optimization_utils.py
src/crypto/: import_utils.py  utils.py
src/stocks/: import_utils.py
src/trade_tools/: __about__.py  __init__.py
