[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trade-tools"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Meraj Hashemi", email = "meraj.hashemi.esh@gmail.com" },
]

dependencies = []

[tool.hatch.version]
path = "src/trade_tools/__about__.py"

[tool.coverage.run]
source_pkgs = ["trade_tools", "tests"]
branch = true
parallel = true
omit = [
  "src/trade_tools/__about__.py",
]

[tool.coverage.paths]
trade_tools = ["src/trade_tools", "*/trade-tools/src/trade_tools"]
tests = ["tests", "*/trade-tools/tests"]

