[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trade-tools"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Meraj Hashemi", email = "meraj.hashemi.esh@gmail.com" },
]

dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/stocks", "src/crypto"]



[tool.coverage.run]
source_pkgs = ["src", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
trade_tools = ["src", "*/trade-tools/src"]
tests = ["tests", "*/trade-tools/tests"]

