[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trade-tools"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Meraj Hashemi", email = "meraj.hashemi.esh@gmail.com" },
]

dependencies = [
  "pandas>=2.3.0",
  "numpy>=2.3.0",
  "matplotlib>=3.10.0",
  "seaborn>=0.13.0",
  "scikit-learn>=1.5.0",
  "statsmodels>=0.14.0",
  "scipy>=1.16.0",
  "requests>=2.32.0",
  "beautifulsoup4>=4.13.0",
  "python-dotenv>=1.2.0",
  "yfinance>=0.2.0",
  "pycoingecko>=3.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "src/stocks", "src/crypto"]



[tool.coverage.run]
source_pkgs = ["src", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
trade_tools = ["src", "*/trade-tools/src"]
tests = ["tests", "*/trade-tools/tests"]

